--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,2 +1,4 @@
-v0.1.0, 2015-??-?? (upcoming version) -- Initial release
+v0.1.0, 2015-01-21 -- Initial release
 
+* Student, Course, CoursesList
+* Courses list filters
