--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+v0.1.1, 2015-01-22
+
+* Allow the creation of empty ``Student`` objects
+
 v0.1.0, 2015-01-21 -- Initial release
 
 * Student, Course, CoursesList
