--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,10 @@
+v0.1.2, 2015-02-?? (upcoming version)
+
+* `lxml` dependency removed
+
 v0.1.2-alpha, 2015-01-22
 
-* Experimental support for the M1 page
+* Support for the M1 page
 
 v0.1.1, 2015-01-22
 
